## Process this file with automake to produce Makefile.in

NULL =

public_icons_themes = \
	hicolor	\
	$(NULL)

public_icons = \
	$(NULL)

private_icons = \
	hicolor_actions_scalable_hb-document-new-symbolic.svg \
	hicolor_actions_scalable_hb-document-open-symbolic.svg \
	hicolor_actions_scalable_hb-document-print-symbolic.svg \
	hicolor_actions_scalable_hb-document-save-symbolic.svg \
	hicolor_actions_scalable_hb-account-symbolic.svg \
	hicolor_actions_scalable_hb-archive-symbolic.svg \
	hicolor_actions_scalable_hb-assign-symbolic.svg \
	hicolor_actions_scalable_hb-budget-symbolic.svg \
	hicolor_actions_scalable_hb-category-symbolic.svg \
	hicolor_actions_scalable_hb-clear-symbolic.svg \
	hicolor_actions_scalable_hb-donate-symbolic.svg \
	hicolor_actions_scalable_hb-file-export-symbolic.svg \
	hicolor_actions_scalable_hb-file-import-symbolic.svg \
	hicolor_actions_scalable_hb-filter-symbolic.svg \
	hicolor_actions_scalable_hb-go-down-symbolic.svg \
	hicolor_actions_scalable_hb-go-up-symbolic.svg \
	hicolor_actions_scalable_hb-help-symbolic.svg \
	hicolor_actions_scalable_hb-legend-symbolic.svg \
	hicolor_actions_scalable_hb-life-energy-symbolic.svg \
	hicolor_actions_scalable_hb-ope-add-symbolic.svg \
	hicolor_actions_scalable_hb-ope-cleared-symbolic.svg \
	hicolor_actions_scalable_hb-ope-delete-symbolic.svg \
	hicolor_actions_scalable_hb-ope-edit-symbolic.svg \
	hicolor_actions_scalable_hb-ope-future-symbolic.svg \
	hicolor_actions_scalable_hb-ope-herit-symbolic.svg \
	hicolor_actions_scalable_hb-ope-multiedit-symbolic.svg \
	hicolor_actions_scalable_hb-ope-reconciled-symbolic.svg \
	hicolor_actions_scalable_hb-ope-show-symbolic.svg \
	hicolor_actions_scalable_hb-payee-symbolic.svg \
	hicolor_actions_scalable_hb-rate-symbolic.svg \
	hicolor_actions_scalable_hb-rep-balance-symbolic.svg \
	hicolor_actions_scalable_hb-rep-budget-symbolic.svg \
	hicolor_actions_scalable_hb-rep-stats-symbolic.svg \
	hicolor_actions_scalable_hb-rep-time-symbolic.svg \
	hicolor_actions_scalable_hb-rep-vehicle-symbolic.svg \
	hicolor_actions_scalable_hb-view-bar-symbolic.svg \
	hicolor_actions_scalable_hb-view-column-symbolic.svg \
	hicolor_actions_scalable_hb-view-donut-symbolic.svg \
	hicolor_actions_scalable_hb-view-line-symbolic.svg \
	hicolor_actions_scalable_hb-view-list-symbolic.svg \
	hicolor_actions_scalable_hb-view-pie-symbolic.svg \
	hicolor_actions_scalable_hb-view-progress-symbolic.svg \
	hicolor_actions_scalable_hb-view-refresh-symbolic.svg \
	hicolor_actions_scalable_hb-view-stack-symbolic.svg \
	hicolor_actions_scalable_hb-view-stack100-symbolic.svg \
	hicolor_status_scalable_hb-changes-allow-symbolic.svg \
	hicolor_status_scalable_hb-changes-prevent-symbolic.svg \
	hicolor_status_scalable_hb-file-valid-symbolic.svg \
	hicolor_status_scalable_hb-file-invalid-symbolic.svg \
	hicolor_status_scalable_hb-item-added-symbolic.svg \
	hicolor_status_scalable_hb-item-auto-symbolic.svg \
	hicolor_status_scalable_hb-item-budget-symbolic.svg \
	hicolor_status_scalable_hb-item-closed-symbolic.svg \
	hicolor_status_scalable_hb-item-edited-symbolic.svg \
	hicolor_status_scalable_hb-item-forced-symbolic.svg \
	hicolor_status_scalable_hb-item-future-symbolic.svg \
	hicolor_status_scalable_hb-item-import-symbolic.svg \
	hicolor_status_scalable_hb-item-pending-symbolic.svg \
	hicolor_status_scalable_hb-item-remind-symbolic.svg \
	hicolor_status_scalable_hb-item-similar-symbolic.svg \
	hicolor_status_scalable_hb-item-clear-symbolic.svg \
	hicolor_status_scalable_hb-item-recon-symbolic.svg \
	hicolor_status_scalable_hb-item-reconlock-symbolic.svg \
	hicolor_status_scalable_hb-item-void-symbolic.svg \
	hicolor_status_scalable_hb-pm-cash-symbolic.svg \
	hicolor_status_scalable_hb-pm-ccard-symbolic.svg \
	hicolor_status_scalable_hb-pm-check-symbolic.svg \
	hicolor_status_scalable_hb-pm-dcard-symbolic.svg \
	hicolor_status_scalable_hb-pm-deposit-symbolic.svg \
	hicolor_status_scalable_hb-pm-directdebit-symbolic.svg \
	hicolor_status_scalable_hb-pm-epayment-symbolic.svg \
	hicolor_status_scalable_hb-pm-fifee-symbolic.svg \
	hicolor_status_scalable_hb-pm-intransfer-symbolic.svg \
	hicolor_status_scalable_hb-pm-none-symbolic.svg \
	hicolor_status_scalable_hb-pm-mobphone-symbolic.svg \
	hicolor_status_scalable_hb-pm-standingorder-symbolic.svg \
	hicolor_status_scalable_hb-pm-transfer-symbolic.svg \
	hicolor_status_scalable_hb-quicktips-symbolic.svg \
	hicolor_status_scalable_prf-advanced-symbolic.svg \
	hicolor_status_scalable_prf-backup-symbolic.svg \
	hicolor_status_scalable_prf-euro-symbolic.svg \
	hicolor_status_scalable_prf-folder-symbolic.svg \
	hicolor_status_scalable_prf-forecast-symbolic.svg \
	hicolor_status_scalable_prf-general-symbolic.svg \
	hicolor_status_scalable_prf-import-symbolic.svg \
	hicolor_status_scalable_prf-interface-symbolic.svg \
	hicolor_status_scalable_prf-interface-theme-symbolic.svg \
	hicolor_status_scalable_prf-interface-color-symbolic.svg \
	hicolor_status_scalable_prf-locale-symbolic.svg \
	hicolor_status_scalable_prf-report-symbolic.svg \
	hicolor_status_scalable_prf-transaction-symbolic.svg \
	hicolor_status_scalable_prf-transaction-dialog-symbolic.svg \
	hicolor_status_scalable_prf-transaction-transfer-symbolic.svg \
	hicolor_status_scalable_prf-transaction-payment-symbolic.svg \
	$(NULL)


EXTRA_DIST = \
	$(public_icons)		\
	$(private_icons)	\
	$(noinst_DATA)		\
	$(NULL)

###############################################################################

gtk_update_icon_cache = gtk-update-icon-cache -f -t

update-icon-cache:
	@-if test -z "$(DESTDIR)"; then \
		echo "Updating Gtk icon cache in '$(DESTDIR)'"; \
		for theme in $(public_icons_themes); do \
			echo " > $(datadir)/icons/$$theme."; \
			$(gtk_update_icon_cache) $(datadir)/icons/$$theme; \
			$(gtk_update_icon_cache) $(DESTDIR)$(pkgdatadir)/icons/$$theme; \
		done; \
	else \
		echo "*** Icon cache not updated.  After (un)install, run this:"; \
		for theme in $(public_icons_themes); do \
			echo "***   $(gtk_update_icon_cache) $(datadir)/icons/$$theme"; \
		done; \
	fi

install-icons:
	for theme in $(public_icons_themes); do \
		cp index.theme $(DESTDIR)$(pkgdatadir)/icons/$$theme/index.theme; \
	done; \
	for icon in $(public_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done; \
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-icons:
	for theme in $(public_icons_themes); do \
		rm $(DESTDIR)$(pkgdatadir)/icons/$$theme/index.theme; \
	done; \
	-for icon in $(public_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done; \
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

install-data-local: install-icons update-icon-cache

uninstall-local: uninstall-icons update-icon-cache
